--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,7 @@ def DEFAULT_BUILD_TOOLS_VERSION             = "25.0.2"
 def DEFAULT_TARGET_SDK_VERSION              = 25
 def DEFAULT_GOOGLE_PLAY_SERVICES_VERSION    = "11.6.2"
 def DEFAULT_ANDROID_MAPS_UTILS_VERSION      = "0.5+"
+def DEFAULT_SUPPORT_LIB_VERSION             = "28.0.0"
 
 android {
     compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
@@ -36,8 +37,10 @@ android {
 dependencies {
     def googlePlayServicesVersion = rootProject.hasProperty('googlePlayServicesVersion')  ? rootProject.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
     def androidMapsUtilsVersion   = rootProject.hasProperty('androidMapsUtilsVersion')    ? rootProject.androidMapsUtilsVersion   : DEFAULT_ANDROID_MAPS_UTILS_VERSION
+    def supportLibVersion = rootProject.hasProperty('supportLibVersion') ? rootProject.supportLibVersion : DEFAULT_SUPPORT_LIB_VERSION
 
     provided "com.facebook.react:react-native:+"
+    api "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.google.android.gms:play-services-base:$googlePlayServicesVersion"
     compile "com.google.android.gms:play-services-places:$googlePlayServicesVersion"
     compile "com.google.android.gms:play-services-location:$googlePlayServicesVersion"
